<package>
  <name>pcl_ros_toolbox</name>
  <version>0.0.1</version>
  <description>
      pcl_ros_toolbox
  </description>
  <author>mike</author>
  <maintainer email="mike@mike.com">mike</maintainer>
  <license>BSD</license>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mesh_msgs</build_depend>
  <build_depend>goicp</build_depend>

 <run_depend>roscpp</run_depend>
 <run_depend>pcl_ros</run_depend>
 <run_depend>pcl_conversions</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>std_srvs</run_depend>
 <run_depend>nodelet</run_depend>
 <run_depend>libpcl-all</run_depend>
 <run_depend>sensor_msgs</run_depend>
 <run_depend>mesh_msgs</run_depend>
  <run_depend>goicp</run_depend>

</package>
